--- a/notebooks/20190815_YN_calculate_meas.ipynb
+++ b/notebooks/20190815_YN_calculate_meas.ipynb
@@ -78,7 +78,7 @@
        "      <td>74958</td>\n",
        "      <td>1508983</td>\n",
        "      <td>a_74958_1GG0EP57</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>105.618</td>\n",
@@ -88,7 +88,7 @@
        "      <td>74958</td>\n",
        "      <td>1508983</td>\n",
        "      <td>a_74958_1GG0EP57</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>69.6553</td>\n",
@@ -98,7 +98,7 @@
        "      <td>74958</td>\n",
        "      <td>1508983</td>\n",
        "      <td>a_74958_1GG0EP57</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>FE(MDD-ps4)</td>\n",
        "      <td>%</td>\n",
        "      <td>49.8492</td>\n",
@@ -108,7 +108,7 @@
        "      <td>74958</td>\n",
        "      <td>1508983</td>\n",
        "      <td>a_74958_1GG0EP57</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>recommendation</td>\n",
        "      <td></td>\n",
        "      <td>greyzone</td>\n",
@@ -118,7 +118,7 @@
        "      <td>96624</td>\n",
        "      <td>2148595</td>\n",
        "      <td>a_96624_41PFB864</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -128,7 +128,7 @@
        "      <td>96624</td>\n",
        "      <td>2148595</td>\n",
        "      <td>a_96624_41PFB864</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -138,7 +138,7 @@
        "      <td>96624</td>\n",
        "      <td>2148595</td>\n",
        "      <td>a_96624_41PFB864</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>FE(MDD-ps4)</td>\n",
        "      <td>%</td>\n",
        "      <td>NaN</td>\n",
@@ -148,7 +148,7 @@
        "      <td>96624</td>\n",
        "      <td>2148595</td>\n",
        "      <td>a_96624_41PFB864</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>recommendation</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
@@ -158,7 +158,7 @@
        "      <td>97220</td>\n",
        "      <td>2165100</td>\n",
        "      <td>a_97220_46RCF9AI</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -168,7 +168,7 @@
        "      <td>97220</td>\n",
        "      <td>2165100</td>\n",
        "      <td>a_97220_46RCF9AI</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -178,7 +178,7 @@
        "      <td>97220</td>\n",
        "      <td>2165100</td>\n",
        "      <td>a_97220_46RCF9AI</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>FE(MDD-ps4)</td>\n",
        "      <td>%</td>\n",
        "      <td>NaN</td>\n",
@@ -188,7 +188,7 @@
        "      <td>97220</td>\n",
        "      <td>2165100</td>\n",
        "      <td>a_97220_46RCF9AI</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>recommendation</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
@@ -198,7 +198,7 @@
        "      <td>126172</td>\n",
        "      <td>2987140</td>\n",
        "      <td>a_126172_EBZCZ8AT</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -208,7 +208,7 @@
        "      <td>126172</td>\n",
        "      <td>2987140</td>\n",
        "      <td>a_126172_EBZCZ8AT</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -218,7 +218,7 @@
        "      <td>126172</td>\n",
        "      <td>2987140</td>\n",
        "      <td>a_126172_EBZCZ8AT</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>FE(MDD-ps4)</td>\n",
        "      <td>%</td>\n",
        "      <td>NaN</td>\n",
@@ -228,7 +228,7 @@
        "      <td>126172</td>\n",
        "      <td>2987140</td>\n",
        "      <td>a_126172_EBZCZ8AT</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>recommendation</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
@@ -238,7 +238,7 @@
        "      <td>126442</td>\n",
        "      <td>2994496</td>\n",
        "      <td>a_126442_EEQL4LRY</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTD(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -248,7 +248,7 @@
        "      <td>126442</td>\n",
        "      <td>2994496</td>\n",
        "      <td>a_126442_EEQL4LRY</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>VTS(MDD-ps4)</td>\n",
        "      <td>mL</td>\n",
        "      <td>NaN</td>\n",
@@ -258,7 +258,7 @@
        "      <td>126442</td>\n",
        "      <td>2994496</td>\n",
        "      <td>a_126442_EEQL4LRY</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>FE(MDD-ps4)</td>\n",
        "      <td>%</td>\n",
        "      <td>NaN</td>\n",
@@ -268,7 +268,7 @@
        "      <td>126442</td>\n",
        "      <td>2994496</td>\n",
        "      <td>a_126442_EEQL4LRY</td>\n",
-       "      <td>2019-08-15 20:20:28.215647</td>\n",
+       "      <td>2019-08-15 20:22:25.508178</td>\n",
        "      <td>recommendation</td>\n",
        "      <td></td>\n",
        "      <td>NaN</td>\n",
@@ -279,26 +279,26 @@
       ],
       "text/plain": [
        "   study_id  instance_id          file_name                   date_run  \\\n",
-       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:20:28.215647   \n",
-       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:20:28.215647   \n",
-       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:20:28.215647   \n",
-       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:20:28.215647   \n",
-       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:20:28.215647   \n",
-       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:20:28.215647   \n",
-       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:20:28.215647   \n",
-       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:20:28.215647   \n",
-       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:20:28.215647   \n",
-       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:20:28.215647   \n",
-       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:20:28.215647   \n",
-       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:20:28.215647   \n",
-       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:20:28.215647   \n",
-       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:20:28.215647   \n",
-       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:20:28.215647   \n",
-       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:20:28.215647   \n",
-       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:20:28.215647   \n",
-       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:20:28.215647   \n",
-       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:20:28.215647   \n",
-       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:20:28.215647   \n",
+       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:22:25.508178   \n",
+       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:22:25.508178   \n",
+       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:22:25.508178   \n",
+       "0     74958      1508983   a_74958_1GG0EP57 2019-08-15 20:22:25.508178   \n",
+       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:22:25.508178   \n",
+       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:22:25.508178   \n",
+       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:22:25.508178   \n",
+       "1     96624      2148595   a_96624_41PFB864 2019-08-15 20:22:25.508178   \n",
+       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:22:25.508178   \n",
+       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:22:25.508178   \n",
+       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:22:25.508178   \n",
+       "2     97220      2165100   a_97220_46RCF9AI 2019-08-15 20:22:25.508178   \n",
+       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:22:25.508178   \n",
+       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:22:25.508178   \n",
+       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:22:25.508178   \n",
+       "3    126172      2987140  a_126172_EBZCZ8AT 2019-08-15 20:22:25.508178   \n",
+       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:22:25.508178   \n",
+       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:22:25.508178   \n",
+       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:22:25.508178   \n",
+       "4    126442      2994496  a_126442_EEQL4LRY 2019-08-15 20:22:25.508178   \n",
        "\n",
        "  measurement_name measurement_unit measurement_value  \n",
        "0     VTD(MDD-ps4)               mL           105.618  \n",
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "from d05_measurement.analyse_segments import calculate_meas\n",
+    "from d05_measurement.calculate_meas import calculate_meas\n",
     "df = calculate_meas('test_downsampleby5')\n",
     "print(df.shape)\n",
     "df"
