added param files for pipeline

--- a/notebooks/WT_d00_utils.ipynb
+++ b/notebooks/WT_d00_utils.ipynb
@@ -26,7 +26,7 @@
     "import psycopg2\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(projectdir)\n",
+    "sys.path.append(os.path.join(projectdir,'src')\n",
     "\n",
     "from src.d00_utils.db_utils import dbReadWriteData, dbReadWriteRaw, dbReadWriteClean\n",
     "from src.d00_utils.s3_utils import get_matching_s3_keys\n",
@@ -125,9 +125,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
