--- a/notebooks/20190808_YN_instance_measurement_gt_eda.ipynb
+++ b/notebooks/20190808_YN_instance_measurement_gt_eda.ipynb
@@ -13,6 +13,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "mpl.rcParams['figure.dpi'] = 300"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
