creating init.py and expanding setup.py

--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ingest_dcm(bucket)\n",
+    "ingest_dcm(bucket) # This function takes a veeeery long time to run.\n",
     "ingest_xtdb(bucket)"
    ]
   },
