--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
+     "evalue": "No module named 'd01_data'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-93b961bb63d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_dcm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_xtdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_dcm_meta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_tables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter_instances\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfilter_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+      "\u001b[0;32m<ipython-input-4-c1cbe24c4376>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_dcm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_xtdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_dcm_meta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_tables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter_instances\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfilter_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'd01_data'"
      ]
     }
    ],
