renamed notebooks and changed imports

--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -9,41 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
+    "%matplotlib inline\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('./src')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'd01_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c1cbe24c4376>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_dcm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md01_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mingestion_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mingest_xtdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_dcm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_dcm_meta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclean_xtdb\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_tables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0md02_intermediate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter_instances\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfilter_all\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'd01_data'"
-     ]
-    }
-   ],
-   "source": [
-    "from d01_data.ingestion_dcm import ingest_dcm\n",
-    "from d01_data.ingestion_xtdb import ingest_xtdb\n",
-    "from d02_intermediate.clean_dcm import clean_dcm_meta\n",
-    "from d02_intermediate.clean_xtdb import clean_tables\n",
-    "from d02_intermediate.filter_instances import filter_all\n",
-    "from d02_intermediate.download_dcm import s3_download_decomp_dcm, dcmdir_to_jpgs_for_classification"
+    "import yaml\n",
+    "import os"
    ]
   },
   {
@@ -52,7 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./conf/local/path_parameters.yml\") as f:\n",
+    "from usal_echo.d01_data.ingestion_dcm import ingest_dcm\n",
+    "from usal_echo.d01_data.ingestion_xtdb import ingest_xtdb\n",
+    "from usal_echo.d02_intermediate.clean_dcm import clean_dcm_meta\n",
+    "from usal_echo.d02_intermediate.clean_xtdb import clean_tables\n",
+    "from usal_echo.d02_intermediate.filter_instances import filter_all\n",
+    "from usal_echo.d02_intermediate.download_dcm import s3_download_decomp_dcm, dcmdir_to_jpgs_for_classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../conf/local/path_parameters.yml\") as f:\n",
     "    paths = yaml.safe_load(f)\n",
     "\n",
     "bucket = paths[\"bucket\"]\n",
@@ -73,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ingest_dcm(bucket) # This function takes a veeeery long time to run.\n",
+    "#ingest_dcm(bucket) # This function takes ~3 days to run. \n",
     "ingest_xtdb(bucket)"
    ]
   },
@@ -143,9 +132,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
