--- a/notebooks/1. Classification.ipynb
+++ b/notebooks/1. Classification.ipynb
@@ -15,9 +15,7 @@
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('./src')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -26,8 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from d03_classification.predict_views import run_classify, agg_probabilities, predict_views\n",
-    "from d03_classification.evaluate_views import evaluate_views"
+    "from usal_echo.d03_classification.predict_views import run_classify, agg_probabilities, predict_views\n",
+    "from usal_echo.d03_classification.evaluate_views import evaluate_views"
    ]
   },
   {
@@ -94,9 +92,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -108,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
