--- a/notebooks/2. Segmentation.ipynb
+++ b/notebooks/2. Segmentation.ipynb
@@ -15,9 +15,7 @@
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('./src')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -26,10 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from d04_segmentation.create_seg_view import create_seg_view\n",
-    "from d04_segmentation.segment_view import run_segment\n",
-    "from d04_segmentation.generate_masks import generate_masks\n",
-    "from d04_segmentation.evaluate_masks import evaluate_masks"
+    "from usal_echo.d04_segmentation.create_seg_view import create_seg_view\n",
+    "from usal_echo.d04_segmentation.segment_view import run_segment\n",
+    "from usal_echo.d04_segmentation.generate_masks import generate_masks\n",
+    "from usal_echo.d04_segmentation.evaluate_masks import evaluate_masks"
    ]
   },
   {
@@ -89,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -103,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
