--- a/notebooks/3. Measurement.ipynb
+++ b/notebooks/3. Measurement.ipynb
@@ -9,15 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "import sys\n",
-    "sys.path.append('./src')"
+    "%matplotlib inline"
    ]
   },
   {
@@ -26,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from d05_measurement.retrieve_meas import retrieve_meas\n",
-    "from d05_measurement.calculate_meas import calculate_meas\n",
-    "from d05_measurement.evaluate_meas import evaluate_meas"
+    "from usal_echo.d05_measurement.retrieve_meas import retrieve_meas\n",
+    "from usal_echo.d05_measurement.calculate_meas import calculate_meas\n",
+    "from usal_echo.d05_measurement.evaluate_meas import evaluate_meas"
    ]
   },
   {
@@ -85,9 +83,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -99,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
