external conf storage

--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from usal_echo.d00_utils.db_utils import *\n",
     "from usal_echo.d01_data.ingestion_dcm import ingest_dcm\n",
     "from usal_echo.d01_data.ingestion_xtdb import ingest_xtdb\n",
     "from usal_echo.d02_intermediate.clean_dcm import clean_dcm_meta\n",
@@ -46,6 +47,15 @@
     "\n",
     "bucket = paths[\"bucket\"]\n",
     "dcm_dir = os.path.expanduser(paths[\"dcm_dir\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -111,6 +121,63 @@
    "outputs": [],
    "source": [
     "filter_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check that tables have been created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_raw = dbReadWriteRaw()\n",
+    "io_raw.list_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_clean = dbReadWriteClean()\n",
+    "io_clean.list_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dm_spain_view_study_summary = io_clean.get_table('dm_spain_view_study_summary')\n",
+    "dm_spain_view_study_summary[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_views = dbReadWriteViews()\n",
+    "io_views.list_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groundtruth_classification = io_views.get_table('instances_w_labels')\n",
+    "groundtruth_classification.head()"
    ]
   },
   {
