updated readme and adapted usr files

--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -195,6 +195,36 @@
    "source": [
     "s3_download_decomp_dcm(train_test_ratio=0.5, downsample_ratio=0.001, dcm_dir, bucket=bucket)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['conf/examples/path_parameters.yml',\n",
+       " 'conf/examples/postgres_credentials.json',\n",
+       " 'conf/infra/models_schema.sql']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "[os.path.join('conf','examples', f) for f in ['path_parameters.yml','postgres_credentials.json']]+[os.path.join('conf','infra','models_schema.sql')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
