--- a/notebooks/0. Data Download and Preprocessing.ipynb
+++ b/notebooks/0. Data Download and Preprocessing.ipynb
@@ -27,35 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from usal_echo import bucket, dcm_dir, img_dir, segmentation_dir, model_dir, classification_model\n",
     "from usal_echo.d00_utils.db_utils import *\n",
     "from usal_echo.d01_data.ingestion_dcm import ingest_dcm\n",
     "from usal_echo.d01_data.ingestion_xtdb import ingest_xtdb\n",
     "from usal_echo.d02_intermediate.clean_dcm import clean_dcm_meta\n",
     "from usal_echo.d02_intermediate.clean_xtdb import clean_tables\n",
     "from usal_echo.d02_intermediate.filter_instances import filter_all\n",
-    "from usal_echo.d02_intermediate.download_dcm import s3_download_decomp_dcm, dcmdir_to_jpgs_for_classification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../conf/local/path_parameters.yml\") as f:\n",
-    "    paths = yaml.safe_load(f)\n",
-    "\n",
-    "bucket = paths[\"bucket\"]\n",
-    "dcm_dir = os.path.expanduser(paths[\"dcm_dir\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.getcwd()"
+    "from usal_echo.d02_intermediate.download_dcm import _downsample_train_test, s3_download_decomp_dcm, dcmdir_to_jpgs_for_classification"
    ]
   },
   {
@@ -193,38 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_download_decomp_dcm(train_test_ratio=0.5, downsample_ratio=0.001, dcm_dir, bucket=bucket)"
+    "s3_download_decomp_dcm(train_test_ratio=0.5, downsample_ratio=0.0001, dcm_dir=dcm_dir, bucket=bucket)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['conf/examples/path_parameters.yml',\n",
-       " 'conf/examples/postgres_credentials.json',\n",
-       " 'conf/infra/models_schema.sql']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "[os.path.join('conf','examples', f) for f in ['path_parameters.yml','postgres_credentials.json']]+[os.path.join('conf','infra','models_schema.sql')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
